--- a/Mods/OdinCore_4bcb0f56-d4dd-4241-9285-0f5710913edb/Localization/English/english.xml
+++ b/Mods/OdinCore_4bcb0f56-d4dd-4241-9285-0f5710913edb/Localization/English/english.xml
@@ -6,28 +6,34 @@
 	<content contentuid="he64fab83g7756g4f76g80bbgb4565bfc1524" Source="OdinCORE_CustomVendor_Test.lsj">Bye</content>
 	<content contentuid="hcf572822g78b2g4bf6g9c71gbb837feb57a2" Source="OdinCORE_CustomVendor_Test.lsj">Hello there!</content>
 	<content contentuid="he9fffda3gee59g4401g9cf5g04a54dd546ec" Source="OdinCORE_OdinNPC_01.lsj">Tell me a joke.</content>
-	<content contentuid="ha836ea01g51e8g49bdga815gb493f3eb4768" Source="OdinCORE_OdinNPC_01.lsj">Don&apos;t forget to support modders for any games and mods that you play. We put a lot of effort into creating content, and a little support goes a long way! &lt;br&gt;&lt;br&gt;Although I don&apos;t accept donations for my mods at this time, a Steam rating or NexusMods endorsement would be excellent!</content>
+	<content contentuid="ha836ea01g51e8g49bdga815gb493f3eb4768" Source="OdinCORE_OdinNPC_01.lsj">Don&apos;t forget to support modders for any games and mods that you play. We put a lot of effort into creating content, and a little support goes a long way! &lt;br&gt;&lt;br&gt;If you wish to tip me, head to ko-fi.com/odinblade. Thank you!</content>
 	<content contentuid="h5fd930edg8903g40b9gaaceg545ee38f28d0" Source="OdinCORE_OdinNPC_01.lsj">That&apos;ll be all for now.</content>
 	<content contentuid="ha6da3109g9059g45degadefg59cc268ab0e6" Source="OdinCORE_OdinNPC_01.lsj">Consider it done, friend!</content>
 	<content contentuid="ha1853645gd545g4abeg8ccag97429d983415" Source="OdinCORE_OdinNPC_01.lsj">Why are you speaking through an illusion?</content>
 	<content contentuid="hb312d460g1ba9g437fgb9e8g11c563ba1562" Source="OdinCORE_OdinNPC_01.lsj">I&apos;m cooking up some more mods and enhancements in my study, so it wouldn&apos;t exactly be efficient to travel wherever you call me to now, would it?</content>
+	<content contentuid="he6b5ceb7ga8efg4869g8a88gf9945e9b0f20" Source="OdinCORE_OdinNPC_01.lsj">Consider it done, friend!</content>
 	<content contentuid="h384332f7gc88eg42ddgae80g364a1f40154c" Source="OdinCORE_OdinNPC_01.lsj">Ah there we go I can see you now. I really ought to invest in better arcane bandwidth...</content>
+	<content contentuid="h01deca88g0e93g40fbg8949gba4dfe912940" Source="OdinCORE_OdinNPC_01.lsj">&lt;b&gt;[OFF]&lt;/b&gt; I do not want enemy Summons to utilise the Boon effects.</content>
 	<content contentuid="h9916bbf2gd4e8g4e9fg95dbg4070cb1f6745" Source="OdinCORE_OdinNPC_01.lsj">&lt;b&gt;[ON]&lt;/b&gt; I would like enemies to be able to use Odinblade skills.</content>
 	<content contentuid="h1debaca0g2b31g48f1gb9dcg1bd0d8bf7a0e" Source="OdinCORE_OdinNPC_01.lsj">Consider it done, friend!</content>
 	<content contentuid="hc6f0214bg2526g47fag8a46gce88a2c73d40" Source="OdinCORE_OdinNPC_01.lsj">&lt;b&gt;[ON]&lt;/b&gt; I would like Odinblade Overhaul vendors to be present in the world.</content>
 	<content contentuid="hdb3e2c49g2f93g44ddgb98cgec52e70b26eb" Source="OdinCORE_OdinNPC_01.lsj">I don&apos;t want to make changes at this time.</content>
 	<content contentuid="h2d3f0182g3dd2g421dga7f1gbf2fdfdad3aa" Source="OdinCORE_OdinNPC_01.lsj">I don&apos;t know. What do you call a successful mirage?</content>
+	<content contentuid="h7de87378g6c35g4b5ag9895gc8a946039174" Source="OdinCORE_OdinNPC_01.lsj">I want to change my &lt;b&gt;Enhanced Summon Scaling &lt;/b&gt;settings.</content>
 	<content contentuid="h817cd066g13ecg4fc0g91c0g1d7e592f740e" Source="OdinCORE_OdinNPC_01.lsj">...</content>
 	<content contentuid="h6747468egfc04g46eeg8de8g462aa0cf5c37" Source="OdinCORE_OdinNPC_01.lsj">*&lt;i&gt;crackling&lt;/i&gt;* Is this thing on?</content>
+	<content contentuid="hc8b8f2a1g203cg4f9aga28agd165af0382a8" Source="OdinCORE_OdinNPC_01.lsj">&lt;b&gt;[ON]&lt;/b&gt; I would like enemy Summons to utilise the Boon effects.</content>
 	<content contentuid="h7f14f0fag4df4g4b11g8c1cg14e6c7292481" Source="OdinCORE_OdinNPC_01.lsj">An &lt;i&gt;optimal &lt;/i&gt;illusion!</content>
 	<content contentuid="h832786d7g6893g4399gaa4dg7459f64e76ee" Source="OdinCORE_OdinNPC_01.lsj">Excellent! Then I shall continue creating more content for you to enjoy.</content>
 	<content contentuid="h32825bcegaacag42dcgbee7g6f5a46aab9d7" Source="OdinCORE_OdinNPC_01.lsj">Current status: [OdinCORE_CustomVendors_Value_5df00af8-4e59-4a8c-82a8-094aba487ad2]&lt;br&gt;Vendors are included with Odinblade&apos;s Overhaul mods, as well as having their weapons and skills available to vanilla vendors. Would you like the new Overhaul vendors to be &lt;b&gt;ON &lt;/b&gt;or &lt;b&gt;OFF&lt;/b&gt;?</content>
 	<content contentuid="h50f9bb90gf7f6g4ddbg9aecg2ce5acb54bd5" Source="OdinCORE_OdinNPC_01.lsj">&lt;b&gt;[OFF]&lt;/b&gt; I would not like Odinblade Overhaul vendors to be present in the world.</content>
 	<content contentuid="he5a83d41g4f4cg4b66g95bfg5690c62eb35d" Source="OdinCORE_OdinNPC_01.lsj">Current status: [OdinCORE_EnemySkills_Value_51846049-ce6a-40ba-8ede-816cd3457fe0]&lt;br&gt;Enemies can use Odinblade skills and effects should you wish. Would you like this feature to be &lt;b&gt;ON &lt;/b&gt;or &lt;b&gt;OFF&lt;/b&gt;?&lt;br&gt;</content>
+	<content contentuid="h03a37d2dg938fg454bgb779g5ced4400e04b" Source="OdinCORE_OdinNPC_01.lsj">Current status: [OdinCORE_BSS_Value_3f4cfb42-3e70-4105-a7f2-52e3eea0576a]&lt;br&gt;Enemies can utilise the Boons added in my Enhanced Summon Scaling mod on their own Summons. Would you like this feature to be &lt;b&gt;ON &lt;/b&gt;or &lt;b&gt;OFF&lt;/b&gt;?&lt;br&gt;</content>
 	<content contentuid="hcc8b8034g7b17g49cbg9582g17badf20001e" Source="OdinCORE_OdinNPC_01.lsj">I want to change my &lt;b&gt;Custom Vendor&lt;/b&gt; settings.&lt;br&gt;</content>
 	<content contentuid="h247c0404g1143g4f68g88d6ga318b3a0791c" Source="OdinCORE_OdinNPC_01.lsj">&lt;b&gt;[OFF] &lt;/b&gt;I would not like enemies to be able to use Odinblade skills.</content>
 	<content contentuid="h5225a464ge63eg455fga19cg4fa73aa8e0a1" Source="OdinCORE_OdinNPC_01.lsj">What do you call a successful mirage?</content>
 	<content contentuid="h439869cfg691fg49b4g9120g0f179fd695c8" Source="OdinCORE_OdinNPC_01.lsj">I don&apos;t want to make changes at this time.</content>
+	<content contentuid="h0bc09ca3g2dcag41c1gb868g73fe43b267d7" Source="OdinCORE_OdinNPC_01.lsj">I don&apos;t want to make changes at this time.</content>
 	<content contentuid="hcfddd6a9g5192g4590ga7f3ga3625b5ab512" Source="OdinCORE_OdinNPC_01.lsj">My, you are a curious one aren&apos;t you?</content>
 	<content contentuid="h064bf4d2g24dag40c0g9d81gc8949b07b2b3" Source="OdinCORE_OdinNPC_01.lsj">I want to change my &lt;b&gt;Enemy Skills&lt;/b&gt; settings.</content>
 	<content contentuid="h087352a2g6ee4g496dg93a4g9b1fbc61ef75" Source="OdinCORE_OdinNPC_01.lsj">Can I help you with anything?</content>
